# consumption_model_ch

./: .gitignore  README.md  contribution_analysis.ipynb  contribution_analysis_average_consumption.ipynb  contribution_analysis_food.ipynb  create_consumption_database.ipynb  create_consumption_database_paper.ipynb  extract_consumption_vector.ipynb  gwp_uncertainties.ipynb  habe.ipynb  import_all_databases.ipynb  import_all_databases_paper.ipynb  import_databases.py  import_ei35.ipynb  import_hybr.py  plot_habe_scatter.py  rebound.ipynb  reproduce_paper_results_lca.py  setup.cfg  setup.py  utils.py  utils_allocation.py  utils_consumption_db.py  utils_exiobase.py
code_Andi/: consumption.py  consumption_cockpit.py  consumption_linux_cockpit.py  consumption_v2.py  exio2bw2.py
consumption_model_ch/: TODOs  __init__.py  consumption_fus.py  import_databases.py  migrations.py  plot_archetypes.py  utils.py  utils_allocation.py  utils_consumption_db.py  utils_exiobase.py
consumption_model_ch/data/: __init__.py  exiobase-linking.json  (+2 more)
data/: Consumption_Cockpit_adj.xlsx  Draft_Paper_8_v11_SupportingInformation.xlsx  agribalyse_replaced_with_ecoinvent.xlsx  es8b01452_si_002.xlsx  heia2_totaldemands.xlsx  pp_to_bp_exiobase.m
dev/: global_settings.json  import_all_databases.ipynb  paper3_gsa_protocol__import_databases.py  paper_gsa_background_inventories__import_databases.ipynb  paper_gsa_realistic_models__import_databases.ipynb  paper_gsa_realistic_models__import_databases.py  paper_gsa_realistic_models_ex__import_databases.py  potentially_useful.py
sompy/: normalization.py
(+47 files in other folders)
