[metadata]
# replace with your username:
name = consumption_model_ch
version = 0.1.dev1
author = Aleksandra Kim
author_email = aleksandra.kim@icloud.com
description = create Swiss household consumption model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aleksandra-kim/consumption_model_ch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src